--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -293,6 +293,18 @@
     }
   </style>
   
+
+  <header class="navbar navbar-expand-lg bd-navbar sticky-top --bs-danger">
+    <nav class="container-xxl bd-gutter flex-wrap flex-lg-nowrap" aria-label="Main navigation">
+      <button type="button" class="btn btn-light">Light</button>
+      <h1>NICK</h1>
+      <div class="d-flex">
+        <button class="navbar-toggler d-flex d-lg-none order-3 p-2"></button>
+      </div>
+    </nav>
+  </header>
+
+
   <!-- Toolbar -->
   <div class="toolbar" role="banner">
     <img
