--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -7,7 +7,7 @@
       <div id="div-form">
         <form [formGroup]="formUser" id="form">
                       
-          <h4 id="h3-form" class="mb-3 text-uppercase">Log In</h4>
+          <h4 id="h3-form" class="mb-3">Log In</h4>
           
           <div class="form-floating form-outline form-white mb-2">
             <input class="text-light border border-danger form-control input border-2" id="enrollment" type="text" formControlName="enrollment" placeholder="E-mail" required>
