--- a/front/src/app/login/login.component.css
+++ b/front/src/app/login/login.component.css
@@ -83,3 +83,8 @@ main {
 input {
     background: transparent;
 }
+
+.input-transparente{
+    background-color: transparent;
+    caret-color: black;
+}
